kubernetes/minio/manifests/minio-ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-minio
  namespace: minio
spec:
  stripPrefix:
    prefixes:
      - "/minio"
