kubernetes/minio/manifests/minio-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-minio
  namespace: minio

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/minio`)
      kind: Rule
      services:
        - name: minio-console
          port: 9001
      middlewares:
        - name: stripprefix-minio
